// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus005OnBoardEvent.proto";


package pusModelEditorMessages.protobuf;

message Pus005Model {
extensions 6 to 106;

  optional ccsds_mal.protobuf.UINTEGER serviceApid = 1;
  repeated pusModelEditorMessages.protobuf.Pus005OnBoardEvent pus005OnBoardEvent = 2;
  optional ccsds_mal.protobuf.UINTEGER status = 3;
  optional ccsds_mal.protobuf.STRING serviceApidName = 4;
  optional ccsds_mal.protobuf.ULONG uniqueId = 5;
}
