// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus012ParameterMonitoringDefinition.proto";


package pusModelEditor.protobuf;

message Pus012Model {
extensions 10 to 110;

  optional ccsds_mal.protobuf.UINTEGER serviceApid = 1;
  repeated pusModelEditor.protobuf.Pus012ParameterMonitoringDefinition pus012ParameterMonitoringDefinition = 2;
  optional ccsds_mal.protobuf.UINTEGER noOfParameterMonitoringDefinition = 3;
  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 4;
  optional ccsds_mal.protobuf.UINTEGER status = 5;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeServiceStatus = 6;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeServiceStatus = 7;
  optional ccsds_mal.protobuf.STRING serviceApidName = 8;
  optional ccsds_mal.protobuf.ULONG uniqueId = 9;
}
