// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/INTEGER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus013LdtPart.proto";


package pusModelEditor.protobuf;

message Pus013Ldt {
extensions 37 to 137;

  optional ccsds_mal.protobuf.UINTEGER lduId = 1;
  optional ccsds_mal.protobuf.STRING status = 2;
  optional ccsds_mal.protobuf.UINTEGER transferType = 3;
  optional ccsds_mal.protobuf.STRING fileTypeCode = 4;
  optional ccsds_mal.protobuf.STRING startTime = 5;
  optional ccsds_mal.protobuf.STRING endTime = 6;
  optional ccsds_mal.protobuf.UINTEGER size = 7;
  optional ccsds_mal.protobuf.INTEGER remainingSize = 8;
  optional ccsds_mal.protobuf.UINTEGER percent = 9;
  optional ccsds_mal.protobuf.STRING failureCode = 10;
  optional ccsds_mal.protobuf.UINTEGER partitionId = 11;
  optional ccsds_mal.protobuf.STRING fileId = 12;
  optional ccsds_mal.protobuf.STRING fileChecksum = 13;
  repeated pusModelEditor.protobuf.Pus013LdtPart pUS013LdtPart = 14;
  optional ccsds_mal.protobuf.UINTEGER noLDTParts = 15;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeLduId = 16;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeLduId = 17;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSize = 18;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeSize = 19;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStartTime = 20;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStartTime = 21;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeEndTime = 22;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeEndTime = 23;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStatus = 24;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStatus = 25;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeRemainSize = 26;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeRemainSize = 27;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModePercent = 28;
  optional ccsds_mal.protobuf.STRING lastUpdateTimePercent = 29;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFailureCode = 30;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFailureCode = 31;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeFileChecksum = 32;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeFileChecksum = 33;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 34;
  optional ccsds_mal.protobuf.STRING serviceApidName = 35;
  optional ccsds_mal.protobuf.ULONG uniqueId = 36;
}
