// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus013Ldt.proto";


package pusModelEditor.protobuf;

message Pus013Model {
extensions 7 to 107;

  repeated pusModelEditor.protobuf.Pus013Ldt pUS013UplinkLdt = 1;
  repeated pusModelEditor.protobuf.Pus013Ldt pUS013DownlinkLdt = 2;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 3;
  optional ccsds_mal.protobuf.STRING status = 4;
  optional ccsds_mal.protobuf.STRING serviceApidName = 5;
  optional ccsds_mal.protobuf.ULONG uniqueId = 6;
}
