// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus014ForwardedPacket.proto";


package pusModelEditor.protobuf;

message Pus014Model {
extensions 7 to 107;

  repeated pusModelEditor.protobuf.Pus014ForwardedPacket pus014TmPacket = 1;
  optional ccsds_mal.protobuf.TIME groundDate = 2;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 3;
  optional ccsds_mal.protobuf.UINTEGER status = 4;
  optional ccsds_mal.protobuf.STRING serviceApidName = 5;
  optional ccsds_mal.protobuf.ULONG uniqueId = 6;
}
