// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/BLOB.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";


package pusModelEditor.protobuf;

message Pus019EventAction {
extensions 22 to 122;

  optional ccsds_mal.protobuf.UINTEGER apid = 1;
  optional ccsds_mal.protobuf.UINTEGER rid = 2;
  optional ccsds_mal.protobuf.UINTEGER actionStatus = 3;
  optional ccsds_mal.protobuf.BLOB actionTcPacket = 4;
  optional ccsds_mal.protobuf.STRING ridLabel = 5;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeActionStatus = 6;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeActionStatus = 7;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeEventActionRid = 8;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeEventActionRid = 9;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeActionTc = 10;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeActionTc = 11;
  optional ccsds_mal.protobuf.STRING packetName = 12;
  optional ccsds_mal.protobuf.STRING actionName = 13;
  optional ccsds_mal.protobuf.ULONG uniqueId = 14;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 15;
  optional ccsds_mal.protobuf.STRING serviceApidName = 16;
  optional ccsds_mal.protobuf.STRING apidName = 17;
  optional ccsds_mal.protobuf.STRING actionDescription = 18;
  optional ccsds_mal.protobuf.STRING selectionStatus = 19;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeSelectionStatus = 20;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeSelectionStatus = 21;
}
