// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus019EventAction.proto";


package pusModelEditorMessages.protobuf;

message Pus019Model {
extensions 9 to 109;

  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 1;
  repeated pusModelEditorMessages.protobuf.Pus019EventAction pus19EventAction = 2;
  optional ccsds_mal.protobuf.UINTEGER status = 3;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeServiceStatus = 4;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeServiceStatus = 5;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 6;
  optional ccsds_mal.protobuf.STRING serviceApidName = 7;
  optional ccsds_mal.protobuf.ULONG uniqueId = 8;
}
