// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/TIME.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus142FunctionalMonitoring.proto";


package pusModelEditor.protobuf;

message Pus142Model {
extensions 10 to 110;

  optional ccsds_mal.protobuf.UINTEGER serviceStatus = 1;
  repeated pusModelEditor.protobuf.Pus142FunctionalMonitoring pus142FunctionalMonitoring = 2;
  optional ccsds_mal.protobuf.TIME groundDate = 3;
  optional ccsds_mal.protobuf.UINTEGER status = 4;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeServiceStatus = 5;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeServiceStatus = 6;
  optional ccsds_mal.protobuf.ULONG uniqueId = 7;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 8;
  optional ccsds_mal.protobuf.STRING serviceApidName = 9;
}
