// Produced by Acceleo JavaScript Generator 1.1.2
import "./PusValue.proto";


package pusModelEditorMessages.protobuf;

message PusElementList {
extensions 2 to 102;

  repeated pusModelEditorMessages.protobuf.PusValue pusValue = 1;
}
