// Produced by Acceleo JavaScript Generator 1.1.2



package pusModelEditor.protobuf;

message SubscribeStructure {
extensions 1 to 101;

  
}
