// Produced by Acceleo JavaScript Generator 1.1.2
import "../ccsds_mal/INTEGER.proto";
import "../ccsds_mal/STRING.proto";
import "../ccsds_mal/UINTEGER.proto";
import "../ccsds_mal/ULONG.proto";
import "./Pus011CommandParameter.proto";
import "./Pus011TimeShift.proto";


package pusModelEditorMessages.protobuf;

message Pus011Command {
extensions 35 to 135;

  optional ccsds_mal.protobuf.ULONG uniqueId = 1;
  optional ccsds_mal.protobuf.UINTEGER commandApid = 2;
  optional ccsds_mal.protobuf.UINTEGER commandType = 3;
  optional ccsds_mal.protobuf.UINTEGER commandSubType = 4;
  optional ccsds_mal.protobuf.STRING commandApidName = 5;
  optional ccsds_mal.protobuf.STRING commandName = 6;
  optional ccsds_mal.protobuf.STRING commandDescription = 7;
  optional ccsds_mal.protobuf.UINTEGER commandSequenceCount = 8;
  optional ccsds_mal.protobuf.UINTEGER commandSourceId = 9;
  optional ccsds_mal.protobuf.UINTEGER commandSsId = 10;
  optional ccsds_mal.protobuf.UINTEGER serviceApid = 11;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeCommandId = 12;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeCommandId = 13;
  optional ccsds_mal.protobuf.STRING commandBinaryProfile = 14;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeBinProf = 15;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeBinProf = 16;
  optional ccsds_mal.protobuf.STRING commandGroundStatus = 17;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeGroundStatus = 18;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeGroundStatus = 19;
  optional ccsds_mal.protobuf.UINTEGER commandStatus = 20;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeStatus = 21;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeStatus = 22;
  optional ccsds_mal.protobuf.STRING currentExecutionTime = 23;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeCurrentExecTime = 24;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeCurrentExecTime = 25;
  optional ccsds_mal.protobuf.STRING initialExecutionTime = 26;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeInitialExecTime = 27;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeInitialExecTime = 28;
  optional ccsds_mal.protobuf.INTEGER totalTimeShiftOffset = 29;
  optional ccsds_mal.protobuf.UINTEGER lastUpdateModeTotalTimeShiftOffset = 30;
  optional ccsds_mal.protobuf.STRING lastUpdateTimeTotalTimeShiftOffset = 31;
  repeated pusModelEditorMessages.protobuf.Pus011CommandParameter pus011CommandParameters = 32;
  repeated pusModelEditorMessages.protobuf.Pus011TimeShift pus011TimeShift = 33;
  optional ccsds_mal.protobuf.STRING serviceApidName = 34;
}
